--- a/nlpW1.ipynb
+++ b/nlpW1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "nlpW1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNAhUUGOtxtwQHW3NmO6cs8",
+      "authorship_tag": "ABX9TyP2AAqwdZsZSDb29tOCL21N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -415,13 +415,241 @@
         "id": "Eu925virYu4L"
       },
       "source": [
-        ""
+        "**Feature Extraction and** **TF_IDF** "
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "2Dzk7gWhYqfj"
+      },
+      "source": [
+        "texts = [\r\n",
+        "    \"good movie\", \"not a good movie\", \"did not like\", \r\n",
+        "    \"i like it\", \"good one\"\r\n",
+        "]"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E2yvaawpeGnD"
+      },
+      "source": [
+        "from sklearn.feature_extraction.text import TfidfVectorizer"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a2xJ1ApafNJt"
+      },
+      "source": [
+        "import pandas as pd"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G_jK8ksCfP_E"
+      },
+      "source": [
+        "tfidf = TfidfVectorizer(min_df=2, max_df=0.5, ngram_range=(1,2))"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uxhwpNt6gQ4y"
+      },
+      "source": [
+        "features = tfidf.fit_transform(texts)"
+      ],
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sKPVGK86XN2X",
+        "outputId": "7dd45bd6-6d79-4eae-87bd-411507c0a058"
+      },
+      "source": [
+        "tfidf.get_feature_names()"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['good movie', 'like', 'movie', 'not']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sfbKBO3LWlBn",
+        "outputId": "369c140b-27e9-47b9-d0b7-96dcdd94ea4f"
+      },
+      "source": [
+        "features.todense()"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "matrix([[0.70710678, 0.        , 0.70710678, 0.        ],\n",
+              "        [0.57735027, 0.        , 0.57735027, 0.57735027],\n",
+              "        [0.        , 0.70710678, 0.        , 0.70710678],\n",
+              "        [0.        , 1.        , 0.        , 0.        ],\n",
+              "        [0.        , 0.        , 0.        , 0.        ]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Z8DsqzlNWmgg"
+      },
+      "source": [
+        "d = pd.DataFrame(features.todense(), columns=tfidf.get_feature_names())"
+      ],
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "id": "TeMMpSeyXBmu",
+        "outputId": "c34f8a34-2d18-434c-f3b0-318311a19900"
+      },
+      "source": [
+        "d"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>good movie</th>\n",
+              "      <th>like</th>\n",
+              "      <th>movie</th>\n",
+              "      <th>not</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0.707107</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.707107</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>0.577350</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.577350</td>\n",
+              "      <td>0.577350</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.707107</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.707107</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   good movie      like     movie       not\n",
+              "0    0.707107  0.000000  0.707107  0.000000\n",
+              "1    0.577350  0.000000  0.577350  0.577350\n",
+              "2    0.000000  0.707107  0.000000  0.707107\n",
+              "3    0.000000  1.000000  0.000000  0.000000\n",
+              "4    0.000000  0.000000  0.000000  0.000000"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HOveMfRhXCLv"
       },
       "source": [
         ""
