--- a/TimeSeries.ipynb
+++ b/TimeSeries.ipynb
@@ -6,7 +6,7 @@
       "name": "TimeSeries.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOubJ9LxrpaFm5IGNRGkrDZ",
+      "authorship_tag": "ABX9TyNoFnbpTdIxJRwkd0gp3NZ2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -200,7 +200,7 @@
         "# testing data windowing\r\n",
         "import tensorflow as tf"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -211,7 +211,7 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -222,7 +222,7 @@
       "source": [
         "dataset = tf.data.Dataset.range(10)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -238,7 +238,7 @@
         "for val in dataset:\r\n",
         "  print(val.numpy())"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,7 +267,7 @@
         "# windowing \r\n",
         "dataset = dataset.window(4,shift=2)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -286,7 +286,7 @@
         "    print(val.numpy(), end = ' ')\r\n",
         "  print()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -325,7 +325,7 @@
         "    print(val.numpy(), end = ' ')\r\n",
         "  print()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -378,7 +378,7 @@
         "  print(\"window data\")\r\n",
         "  print(window.numpy())"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -433,7 +433,7 @@
         "for x, y in dataset:\r\n",
         "  print(x.numpy(), y.numpy())"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,7 +477,7 @@
         "for x, y in dataset:\r\n",
         "  print(x.numpy(), y.numpy())"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -524,7 +524,7 @@
         "  print(\"x = \", x.numpy())\r\n",
         "  print(\"y = \", y.numpy())"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -562,6 +562,395 @@
       "cell_type": "code",
       "metadata": {
         "id": "mNTct5nwAqqg"
+      },
+      "source": [
+        "# function to return the windowed dataset\r\n",
+        "def windowed_dataset(series, window_size,shift_size, batch_size,shuffle_buffer):\r\n",
+        "  dataset = tf.data.Dataset.from_tensor_slices(series)\r\n",
+        "  dataset = dataset.window(window_size +1, shift = shift_size, drop_remainder = True)\r\n",
+        "  dataset = dataset.flat_map(lambda window: window.batch(window_size+1))\r\n",
+        "  dataset = dataset.shuffle(shuffle_buffer).map(lambda window :  (window[:-1], window[-1]))\r\n",
+        "  dataset = dataset.batch(batch_size).prefetch(1)\r\n",
+        "  return dataset"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r_M7Y2U56CUc"
+      },
+      "source": [
+        "def trend(time, slope=0):\r\n",
+        "    return slope * time\r\n",
+        "\r\n",
+        "def seasonal_pattern(season_time):\r\n",
+        "    \"\"\"Just an arbitrary pattern, you can change it if you wish\"\"\"\r\n",
+        "    return np.where(season_time < 0.4,\r\n",
+        "                    np.cos(season_time * 2 * np.pi),\r\n",
+        "                    1 / np.exp(3 * season_time))\r\n",
+        "\r\n",
+        "def seasonality(time, period, amplitude=1, phase=0):\r\n",
+        "    \"\"\"Repeats the same pattern at each period\"\"\"\r\n",
+        "    season_time = ((time + phase) % period) / period\r\n",
+        "    return amplitude * seasonal_pattern(season_time)\r\n",
+        "\r\n",
+        "def noise(time, noise_level=1, seed=None):\r\n",
+        "    rnd = np.random.RandomState(seed)\r\n",
+        "    return rnd.randn(len(time)) * noise_level\r\n",
+        "\r\n",
+        "time = np.arange(4 * 365 + 1, dtype=\"float32\")\r\n",
+        "baseline = 10\r\n",
+        "series = trend(time, 0.1)  \r\n",
+        "baseline = 10\r\n",
+        "amplitude = 40\r\n",
+        "slope = 0.05\r\n",
+        "noise_level = 5\r\n",
+        "\r\n",
+        "# Create the series\r\n",
+        "series = baseline + trend(time, slope) + seasonality(time, period=365, amplitude=amplitude)\r\n",
+        "# Update with noise\r\n",
+        "series += noise(time, noise_level, seed=42)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "F_0-WKXG9Iob",
+        "outputId": "8bca4b6d-fc86-44b6-ba07-8ac0a237ee15"
+      },
+      "source": [
+        "series.shape"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1461,)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KH8QOZbd9N6i",
+        "outputId": "b1ecba18-28ad-41a3-84dc-48121ddb911c"
+      },
+      "source": [
+        "type(series)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.ndarray"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yRkg-Jmw9nez",
+        "outputId": "36aaa75a-ceec-43d6-f2f7-98af6125f598"
+      },
+      "source": [
+        "time.shape"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1461,)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Sg2xGNGw9Ruq"
+      },
+      "source": [
+        "# creating split for trining and testing\r\n",
+        "split_time = 1000\r\n",
+        "time_train = time[:split_time]\r\n",
+        "x_train = series[:split_time]\r\n",
+        "\r\n",
+        "# for testing \r\n",
+        "time_valid = time[split_time:]\r\n",
+        "x_valid = series[split_time:]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qqquwxzc-CHZ"
+      },
+      "source": [
+        "# creating the windowed data from series\r\n",
+        "dataset = windowed_dataset(x_train, window_size=20, shift_size= 1, batch_size=32, shuffle_buffer=1000)\r\n",
+        "# regression model\r\n",
+        "# single dense layer \r\n",
+        "L0 = tf.keras.layers.Dense(1,input_shape = [20])\r\n",
+        "# defining the model \r\n",
+        "model = tf.keras.models.Sequential([L0])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1Hf04WCq_sEC",
+        "outputId": "cbdcfcdd-ad2d-460e-f855-c1aab951de9e"
+      },
+      "source": [
+        "# trining the model \r\n",
+        "model.compile(loss=\"mse\", optimizer=tf.keras.optimizers.SGD(lr=1e-6, momentum=0.9))\r\n",
+        "model.fit(dataset,epochs=100,verbose=0)\r\n",
+        "\r\n",
+        "print(\"Layer weights {}\".format(L0.get_weights()))"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Layer weights [array([[-0.02214744],\n",
+            "       [-0.07615466],\n",
+            "       [ 0.10335191],\n",
+            "       [-0.03430599],\n",
+            "       [-0.00763742],\n",
+            "       [ 0.08394616],\n",
+            "       [ 0.00252062],\n",
+            "       [-0.071883  ],\n",
+            "       [ 0.00933745],\n",
+            "       [ 0.00254631],\n",
+            "       [-0.03578468],\n",
+            "       [ 0.07111982],\n",
+            "       [-0.06596499],\n",
+            "       [-0.01594495],\n",
+            "       [ 0.0995695 ],\n",
+            "       [ 0.05201309],\n",
+            "       [-0.00174174],\n",
+            "       [ 0.14563236],\n",
+            "       [ 0.34470424],\n",
+            "       [ 0.39630368]], dtype=float32), array([0.0155364], dtype=float32)]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bQD0sqy2Am03"
+      },
+      "source": [
+        "# predicting the values\r\n",
+        "test = x_valid[1:21][np.newaxis] "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7qZ0C7qV5A_C",
+        "outputId": "f03a4751-7943-424a-b569-68cd1070abe0"
+      },
+      "source": [
+        "print(type(test), test.shape)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'numpy.ndarray'> (1, 20)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ClflUy0x5LjC",
+        "outputId": "0274126c-6eca-49cb-fdd9-40d288301023"
+      },
+      "source": [
+        "test"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[68.98552 , 64.6752  , 61.15736 , 67.89844 , 66.390305, 68.91469 ,\n",
+              "        67.6307  , 69.71901 , 61.81174 , 71.091835, 65.51008 , 74.91588 ,\n",
+              "        61.11138 , 73.25516 , 65.58317 , 61.35506 , 62.21152 , 63.048264,\n",
+              "        66.79013 , 67.30303 ]], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6H90czJQ5PIa",
+        "outputId": "ba7df604-d621-473f-fbdf-34b7fce7e340"
+      },
+      "source": [
+        "model.predict(test)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[65.02351]], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bggfix0u5Wuq",
+        "outputId": "4014f6f5-56d2-41b5-aa2a-1f1f63784d23"
+      },
+      "source": [
+        "test = x_valid[21:41][np.newaxis] # newaxis is to deal with the imput size\r\n",
+        "model.predict(test)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[70.44973]], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "93duINRH5uwS",
+        "outputId": "c1e44520-a5ac-4019-ab87-9cd8a53b1c40"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(21,)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kPzvEWr56Ymi"
+      },
+      "source": [
+        "forcast = []\r\n",
+        "for time in range(len(x_train)- 20):\r\n",
+        "  pass\r\n",
+        "  # forcast.append(model.predict(x_train[]))\r\n",
+        "  # todo"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-nyc-TG98wmv"
       },
       "source": [
         ""
